--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 
 <html>
+	
 <head>
+
+	<h2 style="text-align: center">
+		Hajtikova editacia
+	</h2>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <title>Spoon-Knife</title>
